Frontend - UI server running & Start fixing error on mobile production

--- a/FrontEnd/src/sass/components/_serverRunning.scss
+++ b/FrontEnd/src/sass/components/_serverRunning.scss
@@ -17,8 +17,8 @@
   &__text {
     font-size: 1.2rem;
     padding-right: 1rem;
+    top: 1rem;
     left: 1rem;
-    bottom: 1rem;
     position: absolute;
 
     @media only screen and (max-width: $px1040) {
